MSS-1869-[PLP - Layout Shift Fix for Filter, Sorting and count functions]-partialy-fixed-layout-shifting

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/search.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/search.scss
@@ -2004,9 +2004,15 @@
 
 .listrak-persistent-popup {
     display: none !important;
-  }
-  .button-floting {
+}
+
+.button-floting {
+    
     &.button-search-result {
-      bottom: rem(41);
+        bottom: rem(41);
     }
-  }
+}
+
+.filter-count-visible { 
+    visibility: visible;
+}
